fix: header z-index increased to show up on the container

--- a/src/assets/scss/elements/_vectors.scss
+++ b/src/assets/scss/elements/_vectors.scss
@@ -1,6 +1,6 @@
 .header {
   position: relative;
-  z-index: 3;
+  z-index: 15;
 }
 
 .main {
